--- a/index.html
+++ b/index.html
@@ -1346,8 +1346,8 @@
 
     <script>
         // GitHub-based data storage
-        const GITHUB_USER = "your-github-username";
-        const GITHUB_REPO = "your-repo-name";
+        const GITHUB_USER = "SHB-Farms";
+        const GITHUB_REPO = "Farm-Log";
         const DATA_PATH = "farm-data.json";
         const SYNC_INTERVAL = 30000; // 30 seconds
         
