--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@
 
     <script>
         // GitHub-based data storage
-        const GITHUB_USER = "shbtrucking";
+        const GITHUB_USER = "SHB-Farms";
         const GITHUB_REPO = "Farm-Log";
         const DATA_PATH = "farm-data.json";
         const SYNC_INTERVAL = 30000; // 30 seconds
