--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
         // GitHub-based data storage
         const GITHUB_USER = "shb-farms";
         const GITHUB_REPO = "Farm-Log";
-        const DATA_PATH = "farm-data.json";
+        const DATA_PATH = "farmdata.json";
         const SYNC_INTERVAL = 30000; // 30 seconds
         
         // Equipment data
