--- a/index.html
+++ b/index.html
@@ -1269,8 +1269,8 @@
                             <option value="truck">Truck</option>
                             <option value="trailer">Trailer</option>
                             <option value="implement">Implement</option>
-                            <option value="mower">Mower</option>
-                            <option value="sprayer">Sprayer</option>
+                            <option value="other">other</option>
+                            <option value="cars">cars</option>
                         </select>
                     </div>
                 </div>
