--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="header">
-                <h1>Farm Equipment</h1>
+                <h1>SHB Farm Equipment</h1>
             </div>
             
             <div class="filter-section">
