--- a/index.html
+++ b/index.html
@@ -2049,14 +2049,21 @@
                 // Sample data with updated categories
                 equipmentData = [
                     {
-                        id: "TR-001",
-                        name: "John Deere Tractor",
+                        id: "No Internet",
+                        name: "No Internet",
                         category: "tractor",
                         year: 2020,
                         lastMaintenance: "2023-06-15",
                         nextMaintenance: "2024-06-15",
-                        notes: "Primary field tractor",
-                        maintenanceHistory:
+                        notes: "No Internet",
+                        maintenanceHistory: [
+                            {
+                                id: "MH-001",
+                                date: "2023-06-15",
+                                type: "Full Service",
+                                technician: "Mike Johnson",
+                                cost: 350.00,
+                                details: "No Internet"
                             }
                         ]
                     }
