--- a/index.html
+++ b/index.html
@@ -2274,7 +2274,7 @@
             
             // Show sync status bar
             syncStatusBar.classList.add('active');
-            syncMessage.textContent = "Saving changes to GitHub...";
+            syncMessage.textContent = "Saving changes to SHB Server...";
             progressBar.style.width = '0%';
             updateSyncStatus('syncing', 'Saving changes...');
             
