--- a/index.html
+++ b/index.html
@@ -1887,7 +1887,7 @@
     <div class="saving-indicator" id="savingIndicator">
         <div class="saving-content">
             <div class="saving-spinner"></div>
-            <div class="saving-text">Saving changes to GitHub...</div>
+            <div class="saving-text">Saving changes to SHB Server...</div>
             <div class="saving-progress">
                 <div class="saving-progress-bar" id="savingProgressBar"></div>
             </div>
