--- a/index.html
+++ b/index.html
@@ -1873,7 +1873,7 @@
     <div class="sync-status-bar" id="syncStatusBar">
         <div class="sync-message">
             <div class="spinner" style="width: 24px; height: 24px; border-width: 3px;"></div>
-            <span id="syncMessage">Saving changes to GitHub...</span>
+            <span id="syncMessage">Saving changes to SHB Server...</span>
         </div>
         <button class="btn btn-outline" id="cancelSyncBtn" style="display: none;">
             <i class="mdi mdi-close"></i> Cancel
